// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generic centeredText component matches the snapshot with no extra props 1`] = `
<Text
  style={
    Array [
      Object {
        "fontSize": 16,
        "textAlign": "center",
        "width": "100%",
      },
      undefined,
    ]
  }
>
  test
</Text>
`;

exports[`generic centeredText component matches the snapshot with style prop 1`] = `
<Text
  style={
    Array [
      Object {
        "fontSize": 16,
        "textAlign": "center",
        "width": "100%",
      },
      Object {
        "backgroundColor": "blue",
        "width": "30%",
      },
    ]
  }
>
  test
</Text>
`;
